# SqEngine

./: CMakeLists.txt  README.md  SQ.sublime-project  SQ.sublime-workspace
Engine/: CMakeLists.txt
Engine/SQ/: Sq.hpp  pch.hpp
Engine/SQ/Core/: Application.cpp  Application.hpp  Base.hpp  EntryPoint.hpp  Log.cpp  Log.hpp  Timer.cpp  Timer.hpp
Engine/SQ/Event/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Engine/SQ/Input/: Input.cpp  Input.hpp  KeyCodes.hpp  MouseCodes.hpp
Engine/SQ/Layer/: Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp
Engine/SQ/Renderer/: Graphics.cpp  Graphics.hpp  RenderContext.cpp  RenderContext.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp
Engine/SQ/Renderer/Camera/: OrthographicCamera.cpp  OrthographicCamera.hpp
Sandbox/: CMakeLists.txt
Sandbox/src/: Sandbox.cpp
Scripts/: build.sh
assets/Shader/: basic.frag  basic.vert
oldCode/: Sandbox.cpp
